--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       document.querySelector('#connect').innerText = "Disconnect";
       document.querySelector('#connect').classList.remove("btn-primary");
       document.querySelector('#state').innerText = "Connected";
-      document.querySelector('#hint').innerText = "Hint: Press Toggle to switch on/off of LED on LinkIt 7697";
+      document.querySelector('#hint').innerText = "Hint: Press Toggle to switch on/off of LED on BLE";
       document.querySelector('#toggle').classList.remove("disabled");
       document.querySelector('#toggle').classList.add("btn-primary");
       document.querySelector('#toggle').onclick = _toggle;
@@ -137,7 +137,7 @@
       document.querySelector('#connect').innerText = "Connect";
       document.querySelector('#connect').classList.add("btn-primary");
       document.querySelector('#state').innerText = "Disconnected";
-      document.querySelector('#hint').innerText = "Hint: Press Connect to connect to LinkIt 7697";
+      document.querySelector('#hint').innerText = "Hint: Press Connect to connect to BLE";
       document.querySelector('#toggle').classList.add("disabled");
       document.querySelector('#toggle').classList.remove("btn-primary");
     }
@@ -150,7 +150,7 @@
 
 <div class="container">
   <div class="page-header">
-    <h2>LinkIt 7697<br>Web BLE demo</h2>
+    <h2>Test<br>Web BLE demo</h2>
   </div>
   <div class="row">
     <div class="col-sm-3">
