--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     myCharacteristic.writeValue()
     .then(_ => {
-      log('update done, now value is ' + value);
+      log('update done, now value is ' + value[]);
     })
     .catch(error => { 
       log(error); 
