--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       //  a.push(('0' + value.getUint8(i).toString(16)).slice(-2));
       //}
       //log('data received, now value is ' + a.join(' '));
-      log('data received, now value is ' + StatusValue);
+      log('data received, now value is ' + value);
     }
 
     function _update() {
