--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
         document.querySelector('#send').classList.add("disabled");
         document.querySelector('#send').classList.remove("btn-primary");
         document.querySelector('#notify').classList.add("disabled");
+        document.querySelector('#notify').innerText = "Not Receiving";
         document.querySelector('#notify').classList.remove("btn-primary");
       }
       if (notified) {
@@ -218,7 +219,7 @@
       <div class="col-sm-3">
         <button id='connect' type="button" class="btn btn-block">Connect</button>
         <br>
-        <button id='toggle' type="button" class="btn btn-block">Toggle</button>
+        <button id='toggle' type="button" class="btn btn-block">Value</button>
         <br>
         <button id='send' type="button" class="btn btn-block">Send</button>
         <br>
