--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Test Web BLE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+  <link rel="icon" href="icon.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -223,6 +223,7 @@
 
 <body onload='_update()'>
 
+  <img class="pageIcon" src="icon.png">
   <div class="container">
     <div class="page-header">
       <h2>Test<br>Web BLE demo</h2>
