--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         document.querySelector('#hint').innerText = "Hint: Press Send or Recive to communicate with BLE";
         document.querySelector('#toggle').innerText = StatusValue;
         document.querySelector('#toggle').classList.remove("disabled");
-        document.querySelector('#toggle').classList.add("btn-primary");
+        document.querySelector('#toggle').classList.remove("btn-primary");
         document.querySelector('#toggle').onclick = _toggle;
         document.querySelector('#send').classList.remove("disabled");
         document.querySelector('#send').classList.add("btn-primary");
