--- a/index.html
+++ b/index.html
@@ -194,7 +194,10 @@
         document.querySelector('#hint').innerText = "Hint: Press Send or Recive to communicate with BLE";
         document.querySelector('#toggle').innerText = StatusValue;
         document.querySelector('#toggle').classList.remove("disabled");
-        document.querySelector('#toggle').classList.remove("btn-primary");
+        if(StatusValue==1)
+          document.querySelector('#toggle').classList.add("btn-primary");
+          else 
+          document.querySelector('#toggle').classList.remove("btn-primary");
         document.querySelector('#toggle').onclick = _toggle;
         document.querySelector('#send').classList.remove("disabled");
         document.querySelector('#send').classList.add("btn-primary");
@@ -241,8 +244,8 @@
         <button id='connect' type="button" class="btn btn-block">Connect</button>
         <br>
         <button id='toggle' type="button" class="btn btn-block">Value</button>
-        <br>
-        <button id='send' type="button" class="btn btn-block">Send</button>
+        <!-- <br>
+        <button id='send' type="button" class="btn btn-block">Send</button> -->
         <br>
         <button id='notify' type="button" class="btn btn-block">Not Recieving</button>
       </div>
