--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         document.querySelector('#hint').innerText = "Hint: Web Bluetooth API is not available on current browser";
         document.querySelector('#connect').classList.add("disabled");
         document.querySelector('#toggle').classList.add("disabled");
-        document.querySelector('#send').classList.add("disabled");
+        //document.querySelector('#send').classList.add("disabled");
         document.querySelector('#notify').classList.add("disabled");
         return;
       }
@@ -199,9 +199,9 @@
           else 
           document.querySelector('#toggle').classList.remove("btn-primary");
         document.querySelector('#toggle').onclick = _toggle;
-        document.querySelector('#send').classList.remove("disabled");
-        document.querySelector('#send').classList.add("btn-primary");
-        document.querySelector('#send').onclick = _send;
+        // document.querySelector('#send').classList.remove("disabled");
+        // document.querySelector('#send').classList.add("btn-primary");
+        // document.querySelector('#send').onclick = _send;
         //document.querySelector('#notify').innerText = "Not Receiving";
         //document.querySelector('#notify').classList.remove("disabled");
         //document.querySelector('#notify').classList.add("btn-primary");
@@ -216,8 +216,8 @@
         document.querySelector('#toggle').classList.add("disabled");
         document.querySelector('#toggle').innerText = "Value";
         document.querySelector('#toggle').classList.remove("btn-primary");
-        document.querySelector('#send').classList.add("disabled");
-        document.querySelector('#send').classList.remove("btn-primary");
+        // document.querySelector('#send').classList.add("disabled");
+        // document.querySelector('#send').classList.remove("btn-primary");
         document.querySelector('#notify').classList.add("disabled");
         document.querySelector('#notify').innerText = "Not Receiving";
         document.querySelector('#notify').classList.remove("btn-primary");
