--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-tw">
 
 <head>
   <title>Test Web BLE</title>
@@ -70,7 +70,7 @@
           document.querySelector('#notify').classList.remove("btn-primary");
           notified = true;
           myCharacteristic.addEventListener('characteristicvaluechanged',
-          handleNotifications);
+            handleNotifications);
           _update();
           log('Ready!');
         })
@@ -118,7 +118,7 @@
         document.querySelector('#toggle').classList.add("btn-primary");
       else
         document.querySelector('#toggle').classList.remove("btn-primary");
-      
+
       _send();
     }
 
@@ -129,7 +129,7 @@
       var v = Uint8Array.of(StatusValue);
       myCharacteristic.writeValue(v)
         .then(_ => {
-          log('Oo.  data sent, new value is ' + StatusValue);
+          log('☜(ﾟヮﾟ☜) data sent, new value is ' + StatusValue);
         })
         .catch(error => {
           log(error);
@@ -164,15 +164,7 @@
         document.querySelector('#toggle').classList.add("btn-primary");
       else
         document.querySelector('#toggle').classList.remove("btn-primary");
-      //let a = [];
-      // Convert raw data bytes to hex values just for the sake of showing something.
-      // In the "real" world, you'd use data.getUint8, data.getUint16 or even
-      // TextDecoder to process raw data bytes.
-      //for (let i = 0; i < value.byteLength; i++) {
-      //  a.push(('0' + value.getUint8(i).toString(16)).slice(-2));
-      //}
-      //log('data received, now value is ' + a.join(' '));
-      log(' .oO data received, now value is ' + value.getUint8(0));
+      log('(╭☞•́⍛•̀)╭☞ data received, now value is ' + value.getUint8(0));
     }
 
     function _update() {
@@ -194,9 +186,9 @@
         document.querySelector('#hint').innerText = "Hint: Press Send or Recive to communicate with BLE";
         document.querySelector('#toggle').innerText = StatusValue;
         document.querySelector('#toggle').classList.remove("disabled");
-        if(StatusValue==1)
+        if (StatusValue == 1)
           document.querySelector('#toggle').classList.add("btn-primary");
-          else 
+        else
           document.querySelector('#toggle').classList.remove("btn-primary");
         document.querySelector('#toggle').onclick = _toggle;
         // document.querySelector('#send').classList.remove("disabled");
@@ -237,17 +229,21 @@
 
   <div class="container">
     <div class="page-header">
-      <h2>Test<br>Web BLE demo</h2>
+      <h2>
+        Test-0315
+        <br>
+        Web BLE demo
+      </h2>
     </div>
     <div class="row">
       <div class="col-sm-3">
         <button id='connect' type="button" class="btn btn-block">Connect</button>
         <br>
+        <button id='notify' type="button" class="btn btn-block">Not Recieving</button>
+        <br>
         <button id='toggle' type="button" class="btn btn-block">Value</button>
         <!-- <br>
         <button id='send' type="button" class="btn btn-block">Send</button> -->
-        <br>
-        <button id='notify' type="button" class="btn btn-block">Not Recieving</button>
       </div>
       <div class="col-sm-9">
         <h4 id='state'></h4>
