--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
   <title>Test Web BLE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="manifest.json">
   <link rel="icon" href="icon.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      console.log("Will service worker register?");
+      navigator.serviceWorker.register('service-worker.js').then(function(reg) {
+        console.log("Yes it did.");
+      }).catch(function(err){
+        console.log("No it didn't. This happened: ", err)
+      });
+    }
+  </script>
+
 
   <script>
 
@@ -230,7 +243,7 @@
   <div class="container">
     <div class="page-header">
       <h2>
-        Test-0315
+        Test-0728
         <br>
         Web BLE demo
       </h2>
