--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     }
   </script>
 
+  <intent-filter>
+    <action android:name="android.intent.action.VIEW" />
+    <category android:name="android.intent.category.DEFAULT" />
+    <category android:name="android.intent.category.BROWSABLE" />
+    <data
+    android:scheme="https"
+    android:host="example.com"
+    android:pathPrefix="/" />
+  </intent-filter>
 
   <script>
 
